@@ -170,6 +170,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|IndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|BooleanQuery
@@ -647,6 +661,24 @@ operator|.
 name|getMaxClauseCount
 argument_list|()
 argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|mainIndexConfig
+operator|.
+name|writeLockTimeout
+operator|!=
+operator|-
+literal|1
+condition|)
+name|IndexWriter
+operator|.
+name|setDefaultWriteLockTimeout
+argument_list|(
+name|mainIndexConfig
+operator|.
+name|writeLockTimeout
 argument_list|)
 expr_stmt|;
 block|}
