@@ -227,38 +227,7 @@ operator|.
 name|maxFieldLength
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|config
-operator|.
-name|writeLockTimeout
-operator|!=
-operator|-
-literal|1
-condition|)
-name|setWriteLockTimeout
-argument_list|(
-name|config
-operator|.
-name|writeLockTimeout
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|config
-operator|.
-name|commitLockTimeout
-operator|!=
-operator|-
-literal|1
-condition|)
-name|setWriteLockTimeout
-argument_list|(
-name|config
-operator|.
-name|commitLockTimeout
-argument_list|)
-expr_stmt|;
+comment|//if (config.commitLockTimeout != -1) setWriteLockTimeout(config.commitLockTimeout);
 block|}
 block|}
 DECL|method|SolrIndexWriter
